# collision

collision/: collision.hpp  collision_group.hpp  collision_object.hpp
tests/: CMakeLists.txt  test_correctness  test_correctness.cpp  test_init.cpp  test_massive.cpp  test_speed.cpp  test_speed_prepare.cpp
